--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,7 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
+background-color: #c91ea4
+}.App-logo {
   height: 40vmin;
   pointer-events: none;
 }
@@ -14,7 +13,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #1655d3;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
