--- a/src/App.css
+++ b/src/App.css
@@ -49,6 +49,11 @@ background-color: #c91ea4
   height: auto;
  }
 
+ .Cartfoto{
+  width: 100px;
+  height: auto;
+ }
+
  .contenedor{
    width: 250px;
    height: 250px;
